# Hands-On-CV

./: .gitignore  pyproject.toml
Sesiones/Sesion1/: Exercise1.ipynb  requirements.txt
