[tool.poetry]
name = "hands-on-cv"
version = "0.1.0"
description = ""
authors = ["Juan F Rojas <jfernandorojasc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
requests = "^2.31.0"
pillow = "^10.2.0"
transformers = "^4.38.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
